# AM_ALPHAGOZERO

./: .gitignore  CLAUDE.md  proposal.md  pyproject.toml  survey.md
_plans/: stage0_plan.md  stage1_plan.md
_progress/: stage0_progress.md  stage1_progress.md
src/am_baseline/: config.py
src/am_baseline/baseline/: baselines.py
src/am_baseline/model/: attention_model.py  decoder.py  encoder.py  value_head.py
src/am_baseline/problem/: state.py  tsp.py
src/am_baseline/training/: logging.py  trainer.py
src/am_baseline/utils/: misc.py  tensor_ops.py
src/scripts/: eval_baselines.py  eval_value.py  evaluate.py  modal_run_train.py  smoke_test.py  test_pretrained.py  train.py
