[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "am-alphagozero"
version = "0.1.0"
description = "MCTS-Guided Policy Improvement for Combinatorial Optimization (AM + AlphaGo Zero)"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "tqdm",
    "matplotlib",
]

[project.optional-dependencies]
tensorboard = ["tensorboard"]
wandb = ["wandb>=0.18.0"]
modal = ["modal>=1.3.0"]
cloud = ["wandb>=0.18.0", "modal>=1.3.0"]

[tool.setuptools.packages.find]
where = ["src"]
